[gd_scene load_steps=4 format=3 uid="uid://ckmhdt3q35aa8"]

[ext_resource type="Script" path="res://scenes/ui/battle_over_panel.gd" id="1_jw7fv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wenlf"]
bg_color = Color(0, 0, 0, 0.192157)

[sub_resource type="LabelSettings" id="LabelSettings_0ao5l"]
font_size = 125

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wenlf")
script = ExtResource("1_jw7fv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.5
offset_top = -240.5
offset_right = 516.5
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
size_flags_horizontal = 4
text = "Victory!"
label_settings = SubResource("LabelSettings_0ao5l")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
text = "End"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 34
text = "Exit Game"
